Bug 1404850 - Fix self-XSS protection in new console and enable test; r=Honza.
The self-XSS protection was broken since the switch to an HTML document. We
went from using the XUL <notificationbox> tag to a simple div.
But notificationbox has method that a simple div has not, and when trying
to display the warning message, there was an error in terminal.
This patch uses the NotificationBox React component and create it when needed.
It also rename and enable the test that ensures that XSS is working.

MozReview-Commit-ID: BhxIqf7gzAG

UltraBlame original commit: dfc3f11935aa57dbb750007a59c1758933cb957e

--- a/devtools/client/webconsole/webconsole.html
+++ b/devtools/client/webconsole/webconsole.html
@@ -241,6 +241,34 @@ stylesheet
 href
 =
 "
+resource
+:
+/
+/
+devtools
+/
+client
+/
+shared
+/
+components
+/
+NotificationBox
+.
+css
+"
+/
+>
+<
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
 chrome
 :
 /
@@ -409,6 +437,10 @@ notificationbox
 "
 >
 <
+/
+div
+>
+<
 div
 class
 =
@@ -499,10 +531,6 @@ list
 <
 /
 textarea
->
-<
-/
-div
 >
 <
 /
