--- a/testing/web-platform/tests/pointerevents/pointerevent_sequence_at_implicit_release_on_click.html
+++ b/testing/web-platform/tests/pointerevents/pointerevent_sequence_at_implicit_release_on_click.html
@@ -406,6 +406,30 @@ pointerout
 pointerleave
 "
 ;
+assert_true
+(
+event_log
+.
+join
+(
+"
+"
+)
+.
+startsWith
+(
+expected_events
+)
+"
+Boundary
+events
+are
+emitted
+after
+lostpointercapture
+"
+)
+;
 assert_equals
 (
 event_log
@@ -416,6 +440,13 @@ join
 "
 )
 expected_events
+"
+No
+extra
+events
+are
+emitted
+"
 )
 ;
 }
