--- a/testing/web-platform/tests/pointerevents/pointerevent_sequence_at_implicit_release_on_click.html
+++ b/testing/web-platform/tests/pointerevents/pointerevent_sequence_at_implicit_release_on_click.html
@@ -358,17 +358,30 @@ test_pointer_event
 setup_pointerevent_test
 (
 "
-Event
-sequence
-at
-implicit
-release
-on
-click
+Boundary
+events
+are
+emitted
+after
+lostpointercapture
 "
 [
 inputSource
 ]
+)
+;
+var
+no_extra_event_test
+=
+async_test
+(
+"
+No
+extra
+events
+are
+emitted
+"
 )
 ;
 on_event
@@ -388,14 +401,6 @@ function
 (
 )
 {
-test_pointer_event
-.
-step
-(
-function
-(
-)
-{
 var
 expected_events
 =
@@ -406,6 +411,14 @@ pointerout
 pointerleave
 "
 ;
+test_pointer_event
+.
+step
+(
+function
+(
+)
+{
 assert_true
 (
 event_log
@@ -420,33 +433,6 @@ startsWith
 (
 expected_events
 )
-"
-Boundary
-events
-are
-emitted
-after
-lostpointercapture
-"
-)
-;
-assert_equals
-(
-event_log
-.
-join
-(
-"
-"
-)
-expected_events
-"
-No
-extra
-events
-are
-emitted
-"
 )
 ;
 }
@@ -476,7 +462,60 @@ then
 =
 >
 {
+let
+extra_events
+=
+event_log
+.
+join
+(
+"
+"
+)
+.
+replace
+(
+new
+RegExp
+(
+^
+{
+expected_events
+}
+(
+)
+?
+)
+"
+"
+)
+;
 test_pointer_event
+.
+done
+(
+)
+;
+no_extra_event_test
+.
+step
+(
+(
+)
+=
+>
+{
+assert_equals
+(
+extra_events
+"
+"
+)
+;
+}
+)
+;
+no_extra_event_test
 .
 done
 (
